--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ghast.js",
   "version": "0.1.0",
   "description": "An abstract syntax tree designed for use with peg.js",
-  "main": "index.js",
+  "main": "lib/ghast.js",
   "directories": {
     "lib": "lib"
   },
@@ -10,7 +10,7 @@
     "test": "jasmine"
   },
   "keywords": [
-    "ast"
+    "ast", "abstract syntax tree", "syntax", "parser", "peg", "pegjs", "ghast"
   ],
   "author": "aetherised",
   "license": "MIT",
