--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ghast.js",
   "version": "0.1.0",
   "description": "An abstract syntax tree designed for use with peg.js",
-  "repository": "github:aetherised/ghast.js",
-  "homepage": "https://github.com/aetherised/ghast.js",
-  "bugs": "https://github.com/aetherised/ghast.js/issues",
+  "repository": "github:0E9B061F/ghast.js",
+  "homepage": "https://github.com/0E9B061F/ghast.js",
+  "bugs": "https://github.com/0E9B061F/ghast.js/issues",
   "main": "lib/ghast.js",
   "files": [
     "lib"
@@ -17,15 +17,23 @@
     "test": "jasmine"
   },
   "keywords": [
-    "ast", "abstract syntax tree", "syntax", "parser", "peg", "pegjs", "ghast"
+    "ast",
+    "abstract",
+    "syntax",
+    "tree",
+    "peg",
+    "pegjs",
+    "peggy",
+    "ghast"
   ],
   "author": {
-    "name": "Abacus Lever",
-    "email": "aetherised@gmail.com",
-    "url": "https://github.com/aetherised"
+    "name": "0E9B061F",
+    "email": "0E9B061F@protonmail.com",
+    "url": "https://github.com/0E9B061F"
   },
   "license": "MIT",
   "devDependencies": {
     "jasmine": "^3.5.0"
-  }
+  },
+  "dependencies": {}
 }
