--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "jasmine": "^3.5.0"
+    "jasmine": "^3.5.0",
+    "peggy": "^2.0.1"
   },
   "dependencies": {}
 }
