--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ghast.js",
-  "version": "0.4.2",
+  "version": "0.4.3",
+  "series": "SEPULCHRAVE",
   "description": "An abstract syntax tree designed for use with peg.js",
   "repository": "github:0E9B061F/ghast.js",
   "homepage": "https://github.com/0E9B061F/ghast.js",
