--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghast.js",
-  "version": "0.5.2",
-  "series": "FUCHSIA",
+  "version": "0.6.0",
+  "series": "FLAY",
   "description": "An abstract syntax tree designed for use with peg.js",
   "repository": "github:0E9B061F/ghast.js",
   "homepage": "https://github.com/0E9B061F/ghast.js",
